# prawnalith

./: .gitignore  .gitmodules  LICENSE_APACHE  README.md
cloud_images/: .gitignore  README.md  docker-compose-gstreamer.yml  docker-compose.sh  docker-compose.yml  docker_clean.sh  init.sh  start.sh
cloud_images/gstreamer/: Dockerfile  README.md  cors_http.py  index.html  recv.sh  send.sh
cloud_images/hello/: Cargo.toml  Dockerfile
cloud_images/pond/: Cargo.toml  Dockerfile  README.md  sample.env_
cloud_images/pond/examples/: token.rs
cloud_images/pond/src/: auth.rs  authentication.rs  authorization.rs  claims.rs  config.rs  key_pairs.rs  lib.rs  push.rs  redis_conn.rs  tanks.rs  web.rs
cloud_images/pond/tests/: authentication.rs  key_pairs.rs  push.rs
cloud_images/systemd/: README.md  _config-redis.service  prawnalith.service  rc.local  redis-configure.service
esp8266_arduino_comm_test/: esp8266_arduino_comm_test.fzz  esp8266_arduino_comm_test.ino  reliable_receive.ino
example/: sample.json
firebase_frontend/: .gitignore  README.md
firebase_frontend/public/: app.js  common.js  index.html  manifest.json  widget.html
frontend/: .gitignore  Cargo.toml  README.md  firebase.json
frontend/first_pass/: .gitignore  index.html  package.json
frontend/first_pass/pkg/: hud.d.ts  hud.js  hud_bg.wasm  index.js
frontend/hud/: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  hud.js  index.html  index.js
frontend/hud/mock_server/: app.js  package.json
frontend/hud/src/: lib.rs  main.rs  pond.rs
frontend/hud/static/: common.js  firebase.js  index.html  pure_ui.js  style.css  widget.html
frontend/src/: lib.rs  pond.rs
frontend/static/: common.js  manifest.json  pure_ui.js  style.css
led_receiver/: README.md  esp8266_receiver.ino  led_receiver.ino
led_receiver/THE_QUICK_BROWN_FOX_MATRIX_LED/: THE_QUICK_BROWN_FOX_MATRIX_LED.ino
led_receiver/arduino_led/: arduino_led.ino
led_receiver/esp8266_receiver/: esp8266_receiver.ino
led_status_helper/: Cargo.toml  README.md
led_status_helper/src/: main.rs
local_base_image/: Dockerfile
local_images/: .gitignore  README.md  build.sh  docker-compose-test.yml  docker-compose.yml  influx.md  install_systemd_scripts.sh  iptables_config.sh  one_time_grafana_setup_for_host.sh  sample_telegraf.conf  start.sh  stop.sh
local_images/base/: Dockerfile  README.md
local_images/gstreamer/: Dockerfile  cors_http.py  recv_ximage.sh
local_images/led_status_helper/: Dockerfile
local_images/mosquitto/: Dockerfile  README.md
local_images/redis/: Dockerfile
local_images/redis_aggregator/: Dockerfile
local_images/rocket/: Dockerfile  README.md
local_images/rust/: Dockerfile  README.md
local_images/systemd/: prawnalith.service
local_images/telegraf/: Dockerfile  README.md  sample_telegraf.conf
local_middleware_image/: Dockerfile
local_rocket_image/: Dockerfile
microcontrollers/: README.md
microcontrollers/area_dht11_esp8266/: area_dht11_esp8266.ino
microcontrollers/esp8266_arduino_comm_test/: esp8266_arduino_comm_test.ino
microcontrollers/led_receiver/: README.md  led_receiver.ino
microcontrollers/led_receiver/doc/: LED_receiver_ESP8266_only_rev1.fzz
microcontrollers/ph_meter_basic/: ph_meter_basic.ino
microcontrollers/ph_temp_sensor_esp8266/: ph_temp_sensor_esp8266.ino
microcontrollers/temp_sensor/: temp_sensor.ino
ph_meter/: ph_meter.ino
ph_ref_calibration/: Cargo.toml
ph_ref_calibration/src/: config.rs  external_id.rs  main.rs  model.rs  predis.rs  routes.rs  web.rs
ph_temp_sensor_esp8266/: ph_temp_sensor_esp8266.ino
redis_context/src/: lib.rs
redis_init/: Cargo.toml
sensor_microcontroller/: sensor_microcontroller.ino
sensor_tracker/: Cargo.toml  README.md
sensor_tracker/src/: main.rs
services/: rc.local  run_led_status.sh  run_ph_ref.sh  run_ph_tracker.sh  run_sensor_tracker.sh  run_temp_tracker.sh  sample.env_  start.sh  stop.sh
services/gcloud_push/: .gitignore  Cargo.toml  README.md  sample.env_
services/gcloud_push/src/: config.rs  data.rs  key.rs  lib.rs  main.rs  model.rs  rdelta.rs  redis_delta.rs
services/led_status_helper/: Cargo.toml  Dockerfile  README.md  build.sh  run.sh  shrink_docker_image.sh
services/led_status_helper/src/: main.rs  model.rs
services/ph_ref_calibration/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml.example  build.sh  container_dev.sh  local_dev.sh  run.sh
services/ph_ref_calibration/src/: config.rs  main.rs  model.rs  predis.rs  routes.rs  web.rs  web_error.rs
services/ph_tracker/: Cargo.toml
services/ph_tracker/src/: model.rs  prawnqtt.rs  predis.rs
services/redis_aggregator/: Cargo.toml  README.md
services/redis_aggregator/examples/: clone.rs  fetch_push.rs  gcloud_hello.rs  hello.rs
services/redis_aggregator/src/: config.rs  lib.rs  pubsub.rs
services/redis_context/: Cargo.toml
services/redis_context/src/: lib.rs
services/redis_delta/: Cargo.toml  README.md
services/redis_delta/src/: lib.rs
services/sensor_tracker/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.qemu_trim  Dockerfile.test  README.md  build.sh  build_qemu_x86.sh  dev.sh  local_dev.sh  remove_toolchains.sh  run.sh
services/sensor_tracker/docker/test/: Dockerfile
services/sensor_tracker/src/: config.rs  logic.rs  main.rs  model.rs  prawnqtt.rs  predis.rs
services/temp_tracker/: Cargo.toml  README.md
services/temp_tracker/src/: main.rs  model.rs  prawnqtt.rs  predis.rs
services/tracker_support/: Cargo.toml
services/tracker_support/src/: lib.rs
services/video/: Dockerfile  README.md  recv_stream_to_hls.sh  recv_ximage.sh  send_html5.sh  send_local.sh  send_stream_udp_local.sh  stream_to_cloud.sh  video_hi_fi.sh  video_lo_fi.sh  video_loop.sh
startup/: run.sh  start.sh  stop.sh
temp_tracker/: Cargo.toml  README.md
temp_tracker/src/: config.rs  main.rs  model.rs  prawnqtt.rs  predis.rs  temp_message.rs
