[package]
name = "ph_ref_calibration"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
envy = "0.3.2"
redis = "0.9.1"
redis_context = { path = "../redis_context" }
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "v5"] }

