[package]
name = "sensor_tracker"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
envy = "0.3.2"
mqtt-protocol = "0.5"
redis = "0.9.1"
serde = "1.0.79"
serde_derive = "1.0.79"
uuid = { version = "0.7", features = ["v4", "v5"] } # v4 is random, v5 is name-based
