[package]
name = "temp_tracker"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13"
envy = "0.3"
redis = "0.9"
rumqtt = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "v5"] } # v4 is random, v5 is name-based
