[package]
name = "pond"
version = "0.4.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
dotenv = "0.13"
envy = "0.3"
frank_jwt = "3.0"
hashbrown = "0.1"
lazy_static = "1.2"
openssl = "0.10"
redis = "0.9"
redis_delta = { git = "https://github.com/Terkwood/prawnalith/", branch = "unstable" }
regex = "1"
reqwest = "0.9"
rocket = { version = "0.4.0-rc.1", features = [ "tls" ] }
rust-crypto = "^0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = [ "json", "redis_pool" ]

