[package]
name = "pond"
version = "0.4.2"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "*"
dotenv = "*"
envy = "*"
frank_jwt = "3.0"
hashbrown = "*"
lazy_static = "*"
openssl = "0.10"
redis = "*"
redis_delta = { git = "https://github.com/Terkwood/prawnalith/", branch = "unstable" }
regex = "*"
reqwest = "*"
rocket = { version = "0.4.2", features = [ "tls" ] }
rust-crypto = "^0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = [ "json", "redis_pool" ]

