[package]
name = "pond"
version = "0.4.3"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
dotenv = "0.14.1"
envy = "0.4.0"
frank_jwt = "3.0"
hashbrown = "0.5.0"
lazy_static = "1.3.0"
openssl = "0.10"
redis = "0.11.0"
redis_delta = { git = "https://github.com/Terkwood/prawnalith/", branch = "unstable" }
regex = "1.2.0"
reqwest = "0.9.19"
rocket = { version = "0.4.2", features = [ "tls" ] }
rust-crypto = "^0.2"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = [ "json", "redis_pool" ]

