[package]
name = "hud"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.20"
js-sys = "0.3"
serde = "^1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
