[package]
name = "hud"
version = "0.2.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stdweb = "0.4.7"
yew = { git = "https://github.com/DenisKolodin/yew", features = ["toml", "yaml", "msgpack", "cbor"] }
