[package]
name = "gcloud_push"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13"
google-pubsub1_beta2 = "1.0.8+20181001"
envy = "0.3"
redis = "0.9"
redis_context = { path = "../redis_context" }
uuid = { version = "0.7", features = ["v4", "v5"] }
