[package]
name = "gcloud_push"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13"
envy = "0.3"
redis = "0.9"
redis_context = { path = "../redis_context" }
redis_delta = { path = "../redis_delta" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
uuid = { version = "0.7", features = ["v4", "v5", "serde"] }

yup-oauth2 = "^ 1.0"
google-pubsub1 = "^ 1.0"
hyper = "0.10"
hyper-native-tls = "0.2"
