[package]
name = "ph_ref_calibration"
version = "0.1.1"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
envy = "0.3.2"
redis = "0.9.1"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "v5"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["redis_pool"]
