[package]
name = "redis_context"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
# 🤖 This artificially low version of rand core will compile on ARMv7 
rand_core="0.2.2"
redis = "0.9"
uuid = { version = "0.7", features = ["v4", "v5"] } # v4 is random, v5 is name-based
