[package]
name = "redis_delta"
version = "0.1.2"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
# 🤖 This artificially low version of rand core will compile on ARMv7 
rand_core="0.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "v5", "serde"] }
