[package]
name = "sensor_tracker"
version = "0.3.1"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "*"
crossbeam-channel = "*"
dotenv = "*"
envy = "*"
rand_core="0.2.2"
rumqtt = "*"
redis = "*"
#TODO
redis_context = { git = "https://github.com/Terkwood/prawnalith/", branch = "tinker/rumqtt" }
# TODO
#redis_delta = { git = "https://github.com/Terkwood/prawnalith/", branch = "tinker/rumqtt" }
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4", "v5"] }
