[package]
name = "sensor_tracker"
version = "0.4.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "*"
crossbeam-channel = "*"
dotenv = "*"
envy = "*"
# 🤖 This artificially low version of rand core will compile on ARMv7 
rand_core="0.2.2"
rumqtt = "*"
redis = "^0.9"
redis_context = { git = "https://github.com/Terkwood/prawnalith/", branch = "unstable" }
redis_delta = { git = "https://github.com/Terkwood/prawnalith/", branch = "unstable" }
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4", "v5"] }
