[package]
name = "temp_tracker"
version = "0.1.1"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13"
envy = "0.3"
paho-mqtt = { path = "../paho.mqtt.rust" }
openssl = { version = "0.10", feature = ["vendored"] }
redis = "0.9"
redis_context = { path = "../redis_context" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracker_support = { path = "../tracker_support" }
uuid = { version = "0.7", features = ["v4", "v5"] }
