[package]
name = "tracker_support"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

[dependencies]
envy = "0.3"
paho-mqtt = { path = "../paho.mqtt.rust" }
redis_context = { path = "../redis_context" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "v5"] }
